After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765261 - listbox: Page up/Down don't do anything with large rows
listbox: Page up/Down don't do anything with large rows
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-04-19 15:17 UTC by Timm Bäder
Modified: 2016-04-22 03:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
listbox: Make sure page down/up move at least one row (3.44 KB, patch)
2016-04-19 15:17 UTC, Timm Bäder
committed Details | Review

Description Timm Bäder 2016-04-19 15:17:52 UTC
Created attachment 326331 [details] [review]
listbox: Make sure page down/up move at least one row

Happens if row_height > page_size, see attached patch.
Comment 1 Matthias Clasen 2016-04-20 11:28:41 UTC
Review of attachment 326331 [details] [review]:

sure
Comment 2 Matthias Clasen 2016-04-22 03:12:48 UTC
Attachment 326331 [details] pushed as 0815b21 - listbox: Make sure page down/up move at least one row